--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,42 @@
-site_name: My Docs
+site_name: BookVault
 theme:
   name: material
+nav:
+  - 介绍: index.md
+  # - 安装:
+      # - 本地环境搭建: "local.md"
+      # - 发布至GitHub Pages: install/github-pages.md
+      # - 发布至自己的HTTP Server: install/http-server.md
+  # - 语法:
+      # - 语法总览: syntax/main.md
+      # - 标题: syntax/headline.md
+      # - 段落: syntax/paragraph.md
+markdown_extensions:
+  - admonition
+  - codehilite:
+      guess_lang: false
+      linenums: false
+  - toc:
+      permalink: true
+  - footnotes
+  - meta
+  - def_list
+  - pymdownx.arithmatex
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:pymdownx.emoji.to_png
+  - pymdownx.inlinehilite
+  - pymdownx.magiclink
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences
+  - pymdownx.tasklist
+  - pymdownx.tilde
+  
+  
+  
+  
