--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,10 @@ nav:
       - C++: "开发/C++.md"  
   - 算法:
       - 动态规划: "算法/动态规划.md"
+      - 题集:
+          - 算法系统复习: "算法/算法系统复习.md"
+          - 常用STL: "算法/常用STL.md"
+          - 力扣HOT100: "算法/力扣HOT100.md"
   - JavaAPI: "JavaAPI.md"
   - Linux: "Linux.md"
 
