--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,23 +15,38 @@ nav:
       - Go: "开发/Go.md"
       - Python: "开发/Python.md"
       - C++: "开发/C++.md"  
-  - 算法:
+  - 算法: 
+      - 大纲汇总: "算法/大纲.md"
       - 动态规划: "算法/动态规划.md"
+      - 回溯: "算法/回溯.md"
+      - 高频题: "算法/高频题.md"
+      - 基础技巧: "算法/基础技巧.md"
+      - 经验: "算法/经验.md"
+      - 链表: "算法/链表.md"
+      - 排序: "算法/排序.md"
+      - 设计题: "算法/设计题.md"
+      - 树: "算法/树.md"
+      - 搜索: "算法/搜索.md"
+      - 位运算: "算法/位运算.md"
+      - 栈与队列: "算法/栈与队列.md"
+      - 字符串: "算法/字符串.md"
+
       - 题集:
-          - 算法系统复习: "算法/算法系统复习.md"
-          - 常用STL: "算法/常用STL.md"
-          - 力扣HOT100: "算法/力扣HOT100.md"
+          - 算法系统复习: "题集/算法系统复习.md"
+          - 常用STL: "题集/常用STL.md"
+          - 力扣HOT100: "题集/力扣HOT100.md"
+  - 面试:
+      - 精选Leetcode: "面试/校招LeetCode精选题目.md"
+      - 大厂面经: "面试/校招大厂面经.md"
+      - 面试题: "面试/校招大厂算法题目.md"
+      - 智力题: "面试/校招高频智力题.md"  
+      - 投简历: "面试/校招各公司投简历官方地址.md"  
   - JavaAPI: "JavaAPI.md"
   - Linux: "Linux.md"
+  - 文件: 
+      - Linux大全: "文件/Linux大全.pdf"
+  
 
-  # - 安装:
-      # - 本地环境搭建: "local.md"
-      # - 发布至GitHub Pages: install/github-pages.md
-      # - 发布至自己的HTTP Server: install/http-server.md
-  # - 语法:
-      # - 语法总览: syntax/main.md
-      # - 标题: syntax/headline.md
-      # - 段落: syntax/paragraph.md
 markdown_extensions:
   - admonition
   - codehilite:
