--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ nav:
   - 文件: 
       - Linux大全: "文件/Linux大全.pdf"
       - Java开源项目汇总: "文件/Java开源项目汇总.pdf"
-      - JavaGuid: "文件/JavaGuide面试突击.pdf"
+      - JavaGuide: "文件/JavaGuide面试突击.pdf"
       - Java面试题: "文件/2020java面试题.pdf"
       - Java学习路线: "文件/Java开发+自学路线+知识点大梳理.pdf"
       - Cookbook: "文件/cookbook.pdf"
